2009-10-15  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, aprx.c, rfbeacon.c:
	    Add internal "tocall" constant with value "APRX19".
	    That one will track software versions.
	    The 'for' keyword on beacons defaults to $mycall.

	* aprx.h, aprx.c, interface.c, config.c, rfbeacon.c, aprsis.c,
	  ttyreader.c, netbeacon.c:
	    Config machinery redone towards new style.  Rx-IGate
	    works again.  (Old config should work too.)

	* aprx.h, pbuf.c, pbuf.h, interface.c, digipeater.c, aprx.c:
	    Skeletons for pbufs, digipeaters, and their uses in
	    the interface layer.

	* aprsdigi.c, ax25.c, Makefile.in:
	    Remove obsolete placeholder.  Things will be done differently.

	* config.c, rfbeacon.c:
	    The rfbeacon code will be doing all variants of beacons..

	* interface.c, netax25.c, ttyreader.c, aprx.h, ax25.c:
	    interface_transmit_ax25() is able to transmit a fully formed
	    AX.25 header+control+body frame to Linux internal AX.25 network
	    devices as well as to any serial port attached KISS device.
	    Transmission to TNC2 devices is not supported.
	    Code is also very careful on checking the AX.25 frame header
	    structure, and rejecting outright any with invalid header
	    structure (bad continuation flags, bad chars in callsigns,
	    not so careful with SSID byte contents - too many are careless
	    with those :-( )

2009-10-14  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* rfbeacon.c, interface.c, Makefile.in, config.c, aprx.c,
	  aprx.h, aprx.conf.in, aprsis.c, netbeacon.c:
	    Add a stub of rfbeacon.

2009-10-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, config.c, netax25.c, ttyreader.c, ax25.c,
	  aprx.h, ChangeLog:
	    Feed received AX.25 frames to interface layer for possible
	    digipeat processing.  (Missing: APRSIS originated frames!)

	* interface.c, ttyreader.c, aprx.h, aprx.conf.in, aprx.8.in:
	    Remodelled serial-device definitions into interface layer.